--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -30,6 +30,13 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      
+    - name: Copy
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: ${{github.workspace}}/BuildProducts
+      
 
   
 
