--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -10,6 +10,8 @@ endif()
 project(${PLUGIN_NAME})
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS -Ofast)
 
 add_library(${PROJECT_NAME} SHARED ../RNBOExportDir/rnbo/RNBO.h ../RNBOWrapper/RNBO_FMOD.cpp ../RNBOExportDir/rnbo_source.cpp ../RNBOWrapper/RNBOWrapper.hpp ../RNBOExportDir/rnbo/RNBO.cpp)
