Build product location for UNIX

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -16,7 +16,7 @@ set(CMAKE_CXX_FLAGS -Ofast)
 
 add_library(${PROJECT_NAME} SHARED ../RNBOExportDir/rnbo/RNBO.h ../RNBOWrapper/RNBO_FMOD.cpp ../RNBOExportDir/rnbo_source.cpp ../RNBOWrapper/RNBOWrapper.hpp ../RNBOExportDir/rnbo/RNBO.cpp)
 
-if(APPLE)
+if(APPLE OR UNIX)
  set_target_properties(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ../BuildProducts)
 else()
  set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../BuildProducts)
