--- a/RNBOWrapper/RNBO_FMOD.cpp.in
+++ b/RNBOWrapper/RNBO_FMOD.cpp.in
@@ -50,7 +50,7 @@ FMOD_DSP_PARAMETER_DESC *FMOD_RNBO_dspparam[MAX_RNBO_PARAMETERS] = {};
 FMOD_DSP_DESCRIPTION FMOD_RNBO_Desc =
 {
     FMOD_PLUGIN_SDK_VERSION,
-    "JRF RNBOWrapper", //name
+    "@PLUGIN_NAME@", //name
     0x00010000, //plugin version
     0, //inbuffer
     0, //outbuffer
@@ -215,14 +215,16 @@ FMOD_RESULT F_CALLBACK FMOD_RNBO_dspprocess(FMOD_DSP_STATE *dsp_state, unsigned 
                 state->interleaveBuffer = new float[length * chans];
             }
             
+            outbufferarray->speakermode = GetSpeakermode(chans);
+            outbufferarray->buffernumchannels[0] = chans;
+            
         }
         else
         {
+            outbufferarray->speakermode = GetSpeakermode(numChans);
+            outbufferarray->buffernumchannels[0] = (int)numChans;
             while (!state->rnboObj[0]->prepareToProcess(state->sampleRate,4096)) {}
         }
-
-        outbufferarray->speakermode = GetSpeakermode(numChans);
-        outbufferarray->buffernumchannels[0] = (int)numChans;
         
         
         if(inputsidle != state->lastIdleState)
