fixing fPIC error

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -54,6 +54,7 @@ project(${PLUGIN_NAME})
 
 #make library for potential multiple targets
 add_library(oLib OBJECT ${RNBOSRC_FILES} ${WRAPPER_FILES} ${GENERATED_FILES})
+set_target_properties(oLib PROPERTIES POSITION_INDEPENDENT_CODE ON)
 
 add_library(${PROJECT_NAME} SHARED $<TARGET_OBJECTS:oLib>)
 
